--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ hs_err_pid*
 **/target
 client/target
 client/build
+
+# csr and key for certificate authority tests
+config/https/test-java.csr
+config/https/test-java.key
