--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,4 @@
-# This is our default .CodeClimate.yml, broken out by language. Uncomment the
-# sections at the bottom that apply to your project. ACTION comments indicate
-# places where config might need to be tweaked.
+# This is our default .CodeClimate.yml, broken out by language.
 
 version: "2"
 
@@ -18,7 +16,7 @@ plugins:
         javascript:
         php:
         python:
-          python_version: 3  # ACTION Comment this out if using Python 2
+          python_version: 3
         ruby:
         swift:
         typescript:
@@ -61,12 +59,7 @@ plugins:
     enabled: true
   rubocop:
     enabled: true
-    channel: rubocop-0-79 # As of March 10, 2020, rubocop 0.80.1 is the latest
-                          # However, it does not work with CodeClimate - throws
-                          # an Invalid JSON error.
-  # ACTION uncomment bundler-audit below if using Gemfile/Gemfile.lock
-  # ACTION uncomment brakeman below if using Rails
-
+    channel: rubocop-1-8-1
   # Shell scripts
   shellcheck:
    enabled: true
@@ -93,14 +86,11 @@ plugins:
   sonar-java:
     enabled: true
     config:
-      sonar.java.source: "7" # ACTION set this to the major version of Java used
-  # ACTION uncomment checkstyle below if Java code exists in repo
+      sonar.java.source: "7"
 
   # Node.js
   nodesecurity:
     enabled: true
-  # ACTION uncomment eslint below if JavaScript already exists and .eslintrc
-  # file exists in repo
 
   # PHP
   phan:
@@ -128,40 +118,5 @@ plugins:
     enabled: true
   radon:
     enabled: true
-    # config:
-    #   python_version: 2 # ACTION Uncomment these 2 lines if using Python 2
   sonar-python:
     enabled: true
-
-# ---------------
-# Configuration Required Language specific - these will error and abort the
-# codeclimate run if they are turned on and certain files or configuration are
-# missing. Should be commented out unless the project already includes the
-# necessary files that the linter looks at
-
-  # Ruby - requires presence of Gemfile and Gemfile.lock
-  # bundler-audit:
-  #   enabled: true
-
-  # Rails - requires detecting a Rails application
-  # brakeman:
-  #   enabled: true
-
-  # Chef - requires detecting a cookbook
-  # foodcritic:
-  #   enabled: true
-
-  # Java - might require Java code? Errored when run without
-  # checkstyle:
-  #   enabled: true
-
-  # JavaScript - requires an eslintrc to be created and added to project
-  # eslint:
-  #   enabled: true
-  #   channel: "eslint-6"
-
-# ---------------
-# List any files/folders to exclude from checking. Wildcards accepted. Leave
-# commented if no files to exclude as an empty array will error
-exclude_patterns:
-  - ".gitignore"
