Added extra step in integration test workflow
This step will run the integration tests without default
environment variables set in order to make sure the client
can still be manually configured.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,3 +17,6 @@ jobs:
 
       - name: run integration test script
         run: ./bin/test_integration
+
+      - name: run integration tests without env vars
+        run: ./bin/test_integration -e
