Updated project to enable building fat jar
Also changed the build script to use the `package`
goal rather than just running the integration tests to build
the project. This change is to make including an example which is
built using a fat jar easier for the user to replicate.

--- a/bin/build
+++ b/bin/build
@@ -5,6 +5,10 @@ set -e
 cd "$(dirname "$0")/.." || (echo "Could not cd to parent dir"; exit 1)
 source bin/util
 
-./bin/test_integration $@ --jar
+pushd client
+
+mvn clean package -DskipTests=true
+
+popd
 
 announce "Output available in ./client/target"
