--- a/client/pom.xml
+++ b/client/pom.xml
@@ -18,7 +18,7 @@
 
     <licenses>
         <license>
-            <name>Unlicense</name>
+            <name>Apache 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
             <distribution>repo</distribution>
         </license>
