--- a/client/pom.xml
+++ b/client/pom.xml
@@ -105,7 +105,6 @@
                         </goals>
                     </execution>
                 </executions>
-
                 <configuration>
                 </configuration>
             </plugin>
@@ -178,24 +177,6 @@
                 </executions>
             </plugin>
 
-            <!-- Example configurations for owasp dependency scanner: https://jeremylong.github.io/DependencyCheck/dependency-check-maven/
-                Includes examples of passing false positive results-->
-            <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>7.4.4</version>
-                <configuration>
-                    <cveDownloadWait>20000</cveDownloadWait>
-                    <failBuildOnCVSS>7</failBuildOnCVSS>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -408,6 +389,11 @@
             <version>4.6.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.owasp</groupId>
+			<artifactId>dependency-check-plugin</artifactId>
+			<version>12.1.0</version>
+		</dependency>
     </dependencies>
     <properties>
         <java.version>1.7</java.version>
