CNJR-10047: Migrating to Central Portal

--- a/secrets.yml
+++ b/secrets.yml
@@ -1,4 +1,4 @@
-OSSRH_USERNAME: !var ecosystems/java/ossrh/token/username
-OSSRH_PASSWORD: !var ecosystems/java/ossrh/token/password
+CENTRAL_PORTAL_USERNAME: !var ecosystems/java/ossrh/token/username
+CENTRAL_PORTAL_TOKEN: !var ecosystems/java/ossrh/token/password
 GPG_PRIVATE_KEY: !var:file ecosystems/java/gpg/private-key
 GPG_PASSWORD: !var:file ecosystems/java/gpg/password
