--- a/Dockerfile.tools
+++ b/Dockerfile.tools
@@ -12,7 +12,7 @@ RUN apt-get update -y && \
     rm -rf /var/lib/apt/lists/*
 
 # Download and extract Maven
-RUN curl -o /tmp/maven.tar.gz https://downloads.apache.org/maven/maven-3/${maven_version}/binaries/apache-maven-${maven_version}-bin.tar.gz && \
+RUN curl -o /tmp/maven.tar.gz https://archive.apache.org/dist/maven/maven-3/${maven_version}/binaries/apache-maven-${maven_version}-bin.tar.gz && \
     mkdir -p /opt/maven && \
     tar -xzf /tmp/maven.tar.gz -C /opt/maven --strip-components=1 && \
     rm /tmp/maven.tar.gz
